[package]
name = "ttstokenizer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"] # wasm

[dependencies]
grapheme_to_phoneme = "0.1.0"
cmudict-fast = "0.8.0"
# cmudict = "0.3.2"
# reqwest = { version = "^0.11", features = ["blocking"] }
tempfile = "3.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
wasm-bindgen = "^0.2"
